--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+SECRETAI_REST_SERVER_PORT=29343
 SECRETAI_REST_SERVER_IP=0.0.0.0
-# SECRETAI_REPORT_DIR=/mnt/secure
+SECRETAI_REPORT_DIR=reports
+SECRETAI_SECURE=true
