Improve Makefile to be more verbose

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-SECRETAI_REST_SERVER_PORT=29343
-SECRETAI_REST_SERVER_IP=0.0.0.0
 SECRETAI_REPORT_DIR=reports
+SECRETAI_REST_SERVER_IP=0.0.0.0
 SECRETAI_SECURE=true
+SECRETAI_REST_SERVER_PORT=29343
+SECRETAI_CERT_PATH=/mnt/secure/cert/secretai2_cert.pem
+SECRETAI_KEY_PATH=/mnt/secure/cert/secretai2_private.pem
+SECRETAI_ATTEST_TIMEOUT_SEC=10
+SECRETAI_REPORT_DIR=/mnt/secure
