--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SECRETAI_REPORT_DIR=reports
-SECRETAI_REST_SERVER_IP=0.0.0.0
-SECRETAI_SECURE=true
-SECRETAI_REST_SERVER_PORT=29343
-SECRETAI_CERT_PATH=/mnt/secure/cert/secretai2_cert.pem
-SECRETAI_KEY_PATH=/mnt/secure/cert/secretai2_private.pem
-SECRETAI_ATTEST_TIMEOUT_SEC=10
-SECRETAI_REPORT_DIR=/mnt/secure
+SECRETVM_REPORT_DIR=reports
+SECRETVM_REST_SERVER_IP=0.0.0.0
+SECRETVM_SECURE=true
+SECRETVM_REST_SERVER_PORT=29343
+SECRETVM_CERT_PATH=/mnt/secure/cert/secretai2_cert.pem
+SECRETVM_KEY_PATH=/mnt/secure/cert/secretai2_private.pem
+SECRETVM_ATTEST_TIMEOUT_SEC=10
+SECRETVM_REPORT_DIR=/mnt/secure
