--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ SECRETVM_REPORT_DIR=reports
 SECRETVM_REST_SERVER_IP=0.0.0.0
 SECRETVM_SECURE=true
 SECRETVM_REST_SERVER_PORT=29343
-SECRETVM_CERT_PATH=/mnt/secure/cert/secretai2_cert.pem
-SECRETVM_KEY_PATH=/mnt/secure/cert/secretai2_private.pem
+SECRETVM_CERT_PATH=/mnt/secure/cert/secret_vm_fullchain.pem
+SECRETVM_KEY_PATH=/mnt/secure/cert/secret_vm_private.pem
 SECRETVM_ATTEST_TIMEOUT_SEC=10
 SECRETVM_REPORT_DIR=/mnt/secure
+SECRETVM_DOCKER_COMPOSE_PATH=/mnt/config/docker-compose.yaml
