--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ SECRETVM_KEY_PATH=/mnt/secure/cert/secret_vm_private.pem
 SECRETVM_ATTEST_TIMEOUT_SEC=10
 SECRETVM_REPORT_DIR=/mnt/secure
 SECRETVM_DOCKER_COMPOSE_PATH=/mnt/config/docker-compose.yaml
+SECRETVM_MOUNT_POINT=/mnt/secure
