added vm_updates handlers

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ SECRETVM_ATTEST_TIMEOUT_SEC=10
 SECRETVM_REPORT_DIR=/mnt/secure
 SECRETVM_DOCKER_COMPOSE_PATH=/mnt/config/docker-compose.yaml
 SECRETVM_MOUNT_POINT=/mnt/secure
+SECRETVM_CONFIG_PATH=/mnt/config/secret-vm.json
