system_info and public_keys update

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ SECRETVM_REPORT_DIR=/mnt/secure
 SECRETVM_DOCKER_COMPOSE_PATH=/mnt/secure/docker_wd/docker-compose.yaml
 SECRETVM_MOUNT_POINT=/mnt/secure
 SECRETVM_CONFIG_PATH=/mnt/config/secret-vm.json
+SECRETVM_SYSTEM_INFO_PATH=/mnt/secure/system_info.json
+SECRETVM_PUBLIC_KEY_ED25519=/mnt/secure/docker_wd/crypto/docker_public_key_ed25519.pem
+SECRETVM_PUBLIC_KEY_SECP256K1=/mnt/secure/docker_wd/crypto/docker_public_key_secp256k1.pem
