--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ SECRETVM_CONFIG_PATH=/mnt/config/secret-vm.json
 SECRETVM_SYSTEM_INFO_PATH=/mnt/secure/system_info.json
 SECRETVM_PUBLIC_KEY_ED25519=/mnt/secure/docker_wd/crypto/docker_public_key_ed25519.pem
 SECRETVM_PUBLIC_KEY_SECP256K1=/mnt/secure/docker_wd/crypto/docker_public_key_secp256k1.pem
+SECRETVM_ENV_PATH=/mnt/secure/docker_wd/usr/.env
